add: branch information

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 # SC Detection based on Helgrind
 
-Goal: Detect SC Violation
+Goal: Detect potential SC Violation
+
+Parent Commit: `8151414f0c150a81b06c95a3eaab87a2558521a8`
